# soundtracker

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  TODO.extra  TODO.gtk2  aclocal.m4  cheat-sheet.C.html  cheat-sheet.ru.html  config.h.in  configure  configure.ac  configure.in  envelope-box.glade  envelope-box.xml  format.sh  soundtracker.1  soundtracker.glade  soundtracker.xml  soundtracker_convert_config
app/: Makefile.am  Makefile.in  audio.c  audio.h  audioconfig.c  audioconfig.h  cheat-sheet.c  cheat-sheet.h  clavier.c  clavier.h  clock.c  clock.h  driver-inout.h  driver.h  endian-conv.c  endian-conv.h  envelope-box.c  envelope-box.h  errors.c  errors.h  event-waiter.c  event-waiter.h  extspinbutton.c  extspinbutton.h  file-operations.c  file-operations.h  gettext.h  gui-settings.c  gui-settings.h  gui-subs.c  gui-subs.h  gui.c  gui.h  instrument-editor.c  instrument-editor.h  keys.c  keys.h  main.c  main.h  menubar.c  (+47 more)
app/drivers/: Makefile.am  Makefile.in  alsa-input.c  alsa-output.c  alsa1x-output.c  alsa1x.c  alsa2-input.c  alsa2-output.c  dsound-output.c  dummy-drivers.c  esd-output.c  file-output.c  irix-output.c  jack-output.c  oss-input.c  oss-output.c  oss.c  sdl-output.c  sun-input.c  sun-output.c
app/mixers/: Makefile.am  Makefile.in  integer32-asm.h  integer32.c  kb-x86-asm.h  kb-x86.c  kbfloat-mix.c
doc/: Makefile.in
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makevars  POTFILES  POTFILES.in  da.po  de.po  en@boldquot.po  en@quot.po  es.po  fr.po  gl.po  hr.po  it.po  ja.po  no.po  pl.po  ru.po  rw.po  sk.po  sl.po  soundtracker.pot  sv.po  tr.po  vi.po
